SCAP2022-213 // ITT Participant refactor (#184)
* changed actual tender activity itt participants field from "Add a field" component to "Add to list" component with manual entry

* fixed tests

* fixed checkstyle

* more checkstyle issues fixed

* code smells

* added tests

* fixed test

* removed leftover from testing from template

* changed invalid error message